Added 'forceStop' option to Consumer.deleteGroup()
Also cleaned up several compiler warnings.